Fixed centre align on the screenshot

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -9,6 +9,7 @@
 
 #main-image {
     width: 128px;
+    margin: 0 auto;
 }
 
 .voffset  { margin-top: 2px; }
